syntax = "proto3";

package messages.reports;

option java_package = "com.flair.bi.messages.report";
option java_multiple_files = true;

import "Report.proto";

message ScheduleReportRequest {
    ScheduleReport report = 1;
}

message DeleteScheduledReportRequest {
    string visualizationId = 1;
}

message GetScheduledReportRequest {
    string visualizationId = 1;
}

message ScheduleReportResponse {
    ScheduleReport report = 1;
    string message = 2;
}

message RepUserReq {
    string username = 1;
    int32 pageSize = 2;
    int32 page = 3;
}
message RepUserResp {
    repeated ScheduleReport reports = 1;
    string message = 2;
}

message RepUserCountReq {
    string username = 1;
}

message RepUserCountResp {
    int32 totalReports = 1;
}

message ExecuteReportRequest {
    string visualizationId = 1;
}

message ExecuteReportResponse {

}

message GetScheduleReportLogsRequest {
    string visualizationId = 1;
    int32 pageSize = 2;
    int32 page = 3;
}

message GetScheduleReportLogsResponse {
    int32 totalRecords = 1;
    repeated ReportLog SchedulerLogs = 2;
    string message = 3;
}

message SearchReportsRequest {
    string username = 1;
    string reportName = 2;
    string startDate = 3;
    string endDate = 4;
    int32 pageSize = 5;
    int32 page = 6;
    bool thresholdAlert = 7;
}

message SearchReportsResponse {
    int32 totalRecords = 1;
    repeated ScheduleReport records = 2;
}

message GetChannelPropertiesRequest {
    string channel = 1;
}

message GetChannelPropertiesResponse {
   repeated ChannelParameters channelParameters = 1;
}

message AddTeamConfigsRequest {
    TeamConfigParameters teamConfigParameter = 1;
}

message ConfigsResponse {
    string message = 1;
}

message AddEmailConfigsRequest {
    EmailParameters emailParameter = 1;
}

message GetEmailConfigRequest {
    int32 id =1;
}

message GetEmailConfigResponse {
    EmailParameters record = 1;
}

message GetTeamConfigRequest {
    int32 id =1;
}

message GetTeamConfigResponse {
    repeated TeamConfigParameters records = 1;
}

message GetTeamNamesResponse {
    repeated string records = 1;
}

message UpdateTeamWebhookURLRequest {
    TeamConfigParameters teamConfigParameter = 1;
}

message UpdateEmailSMTPRequest { 
    EmailParameters emailParameter = 1;
}

message DeleteChannelConfigRequest {
    int32 id = 1;
}

message GetScheduleReportLogRequest {
    int64 task_log_meta_id = 1;
}

message GetScheduleReportLogResponse {
    ReportLog report_log = 1;
    ApiError error = 2;
}

message ApiError {
    string message = 1;
}

message GetJiraConfigRequest {
    int32 id =1;
}

message GetJiraConfigResponse {
    JiraParameters record = 1;
}

message JiraConfigsRequest {
    JiraParameters jiraParameter = 1;
}

message CreateJiraTicketRequest {
    int32 id =1;
}

message CreateJiraTicketResponse {
    string message = 1;
    string jiraTicketLink = 2;
}

message GetAllJiraRequest {
    string status = 1;
    int32 pageSize = 2;
    int32 page = 3; 
}
message GetAllJiraResponse {
    int32 totalRecords = 1;
    repeated JiraTickets records = 2;
}
message DisableTicketCreationRequest { 
    int32 schedulerTaskLogId = 1;
}

message NotifyOpenedJiraTicketRequest{
    OpenJiraTicket openJiraTicketConfig = 1;
}

service ReportService {
    rpc GetScheduledReport(GetScheduledReportRequest) returns (ScheduleReportResponse) {};
    rpc GetAllScheduledReportsByUser(RepUserReq) returns (RepUserResp) {};
    rpc GetAllScheduledReportsCountsByUser(RepUserCountReq) returns (RepUserCountResp) {};
    rpc ScheduleReport(ScheduleReportRequest) returns (ScheduleReportResponse) {};
    rpc UpdateScheduledReport(ScheduleReportRequest) returns (ScheduleReportResponse) {};
    rpc DeleteScheduledReport(DeleteScheduledReportRequest) returns (ScheduleReportResponse) {};
    rpc ExecuteReport(ExecuteReportRequest) returns (ExecuteReportResponse) {};
    rpc GetScheduleReportLogs(GetScheduleReportLogsRequest) returns (GetScheduleReportLogsResponse) {};
    rpc SearchReports(SearchReportsRequest) returns (SearchReportsResponse) {};
    rpc GetChannelProperties(GetChannelPropertiesRequest) returns (GetChannelPropertiesResponse) {};
    rpc AddTeamConfigs(AddTeamConfigsRequest) returns (ConfigsResponse) {};
    rpc AddEmailConfigs(AddEmailConfigsRequest) returns (ConfigsResponse) {};
    rpc GetEmailConfig(GetEmailConfigRequest) returns (GetEmailConfigResponse) {};
    rpc GetTeamConfig(GetTeamConfigRequest) returns (GetTeamConfigResponse) {};
    rpc GetTeamNames(GetTeamConfigRequest) returns (GetTeamNamesResponse) {};
    rpc UpdateTeamWebhookURL(UpdateTeamWebhookURLRequest) returns (ConfigsResponse) {};
    rpc UpdateEmailSMTP(UpdateEmailSMTPRequest) returns (ConfigsResponse) {};
    rpc DeleteChannelConfig(DeleteChannelConfigRequest) returns (ConfigsResponse) {};
    rpc GetScheduleReportLog(GetScheduleReportLogRequest) returns (GetScheduleReportLogResponse) {};
    rpc GetJiraConfig(GetJiraConfigRequest) returns (GetJiraConfigResponse) {};
    rpc AddJiraConfigs(JiraConfigsRequest) returns (ConfigsResponse) {};
    rpc UpdateJiraConfigs(JiraConfigsRequest) returns (ConfigsResponse) {};
    rpc CreateJiraTicket(CreateJiraTicketRequest) returns (CreateJiraTicketResponse) {};
    rpc GetAllJira(GetAllJiraRequest) returns (GetAllJiraResponse) {};
    rpc DisableTicketCreation(DisableTicketCreationRequest) returns (ConfigsResponse) {};
    rpc NotifyOpenedJiraTicket(NotifyOpenedJiraTicketRequest) returns (ConfigsResponse) {};
}